# db-drift

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: oracle-support.md  supported-db-objects.md
docs/UML/: draft-dbms_connectors.md
examples/oracle/: README.md
examples/oracle/SQL/: 03.code.sql
examples/sqlite/: README.md  create_2_example_sqlite_dbs.py
src/db_drift/: __init__.py  __main__.py  app.py
src/db_drift/cli/: cli.py  utils.py
src/db_drift/db/: factory.py
src/db_drift/db/connectors/: base_connector.py  oracle.py  sqlite.py
src/db_drift/db/mappers/constraint_types/: __init__.py  base.py  oracle.py  sqlite.py
src/db_drift/db/strategies/: oracle.py  sqlite.py
src/db_drift/models/: __init__.py  abstract_models.py  column.py  complex_abstract_models.py  constraint.py  directory.py  edition.py  function.py  index.py  indextype.py  materialized_view.py  mining_model.py  operator.py  package.py  stored_procedures.py  synonym.py  table.py  trigger.py  type.py  view.py
src/db_drift/utils/: constants.py  custom_logging.py  string.py
src/db_drift/utils/exceptions/: base.py  cli.py  config.py  database.py  formatting.py  status_codes.py
tests/cli/: test_cli.py  test_dbms.py  test_output.py  test_source_target.py  test_version.py
tests/db/: test_oracle_support.py  test_sqlite_support.py
tests/exceptions/: test_exceptions.py
tools/: create_test_pdb.sh
