[project]
name = "db-drift"
version = "1.4.1"
description = "A command line tool to visualize the differences between two DB states."
readme = "README.md"
authors = [
    { name = "Hercules Konsoulas", email = "dyka3773@gmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "db-drift",
    "database",
    "diff",
    "cli",
    "command-line",
    "visualization"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control",
    "Topic :: Database",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "oracledb==3.4.2",
    "psycopg[binary]==3.3.3",
    "pymysql==1.1.2",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "sqlmodel==0.0.38",
    "sshtunnel==0.4.0",
]

[project.urls]
source = "https://github.com/dyka3773/db-drift"
documentation = "https://www.irakliskonsoulas.site/db-drift/"

[project.scripts]
db-drift = "db_drift:main"

[dependency-groups]
dev = [
    "build==1.4.3",
    "pytest==9.0.3",
    "python-semantic-release==10.5.3",
    "tox==4.52.1",
    "twine==6.2.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.semantic_release]
# build_command = "pip install build && python -m build" # Old build command
build_command = """
    python -m pip install uv
    uv lock --upgrade-package backend
    git add uv.lock
    uv build
""" # New build command with uv lock upgrade
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = false
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = []
mode = "update"
insertion_flag = "<!-- insertion marker -->"
template_dir = "templates" # That means we should avoid creating such a folder unless we have custom changelog templates

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "deps"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test", "deps"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.tox]
env_list = ["lint", "3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.tox.env_run_base]
description = "Run tests with the current Python version"
deps = [
    "pytest==9.0.3",
]
commands = [[ "pytest", "-v" ]]

[tool.tox.env.lint]
description = "Lint the codebase with ruff"
deps = [
    "ruff==0.12.3",
]
skip_install = true
commands = [[ "ruff", "check", "src/", "tests/" ]]
